fix: Responsive vertical alignment for devices buttons

--- a/inc/customizer/custom-controls/assets/css/unminified/alignment.css
+++ b/inc/customizer/custom-controls/assets/css/unminified/alignment.css
@@ -81,3 +81,7 @@
     display: flex;
     flex: 1 1 0;
 }
+.customize-control-ast-selector .ast-responsive-btns {
+    position: absolute;
+    right: 0;
+}
